Fix header alignment in RTL

--- a/rtl.css
+++ b/rtl.css
@@ -1,4 +1,3 @@
-.header-aligned-left .site-header,
 caption,
 td,
 th {
